Implementación y prueba exitosa de HU002